# pawcontrol

./: .bandit.yml  .cfduplication.yml  .codecov.yml  .codefactor  .coveragerc  .gitignore  .pre-commit-config.yaml  .prettierignore  .ruff.toml  .ruffignore  .typo  .typos.toml  AGENTS.md  AUTO_FIX_README.md  AUTO_FIX_README.md.removed  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  ENTITY_SERIALIZATION_MIGRATION.py  INSTALLATION.md  INSTALLATION_COMPLETE.md  LICENSE  Makefile  README.md  README_IMPROVEMENTS.md  RELEASE_NOTES.md  ROADMAP.md  __init__.py  agreed_behavior.md  automation_templates.txt  codecov.yml  configuration.yaml  const.py  coordinator.py  coverage.py  coverage.xml  dashboard_helpers.yaml  dev.md  hacs.json  (+25 more)
.circleci/: config.yml
.gemini/: config.yaml  styleguide.md
.github/: CODEOWNERS  FRESSNAPF_RESEARCH.md  FUNDING.yml  README.md  codecov.yml  copilot-instructions.md  dependabot.yml  labeler.yml  pull_request_template.md  release-drafter.yml  release-please-config.json
aiohttp/: __init__.py  client_exceptions.py  test_utils.py  web.py  web_protocol.py
annotatedyaml/: __init__.py  dumper.py  input.py  loader.py
coverage/: __init__  __init__.py  exceptions.py
custom_components/: __init__.py  coordinator_refactor.py  improved_discovery.py  performance_optimizations.py  simplified_config.py  specialized_managers.py
dashboards/: pawcontrol_dashboard.yaml  pawcontrol_generated_dashboard.yaml  setup_dashboard.yaml
docs/: ANALYSE_1.md  ANALYSIS_NOTES.md  AUTOMATIC_GPS_TRACKING.md  BRANDING.md  BRANDS_PR_TEMPLATE.md  BUG_FIX_REPORT_2026-02-14.md  CODE_IMPROVEMENTS_2026-02-15.md  COMPLIANCE_VERIFICATION_REPORT_2026-02-16.md  COMPREHENSIVE_STATUS_REPORT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_PACKAGE.md  DEV_IMPROVEMENTS_2026-02-14.md  ERWEITERT_KOMPLETT.md  EXECUTION_LOG_2026-02-16.md  FEATURES.md  FINAL_STATUS_2026-02-14.md  GIT_COMMANDS.md  GOLD_STANDARD_IMPROVEMENTS.md  GPS_INTEGRATION_GUIDE.md  GPS_UPDATE_README.md  INSTALLATION_COMPLETE.md  INSTALLATION_HELP.md  MAINTENANCE.md  ONE_PAGE_SUMMARY.md  PHASE_5_SECURITY_SUMMARY.md  PHASE_6_DOCUMENTATION_COMPLETE.md  PHASE_7_QA_RELEASE_COMPLETE.md  PROJECT_100_COMPLETE.md  QUALITY_CHECKLIST.md  QUALITY_COMPLIANCE_ANALYSIS_2026-02-16.md  README.de.md  README.es.md  README.fr.md  README.md  READY_TO_DEPLOY.md  REFACTORING_COMPLETE.md  REFACTORING_FINAL_STATUS.md  REFACTORING_STATUS.md  RESILIENCE_STATUS.md  SECURITY_AUDIT.md  (+66 more)
example_automations/: dashboard_helpers.yaml  setup_trigger_automations.yaml  update_dashboard_on_module_change.yaml
examples/: automations.md  dashboard.yaml  gps_automation_examples.yaml
gemini/: config.yaml  styleguide.md
homeassistant/: __init__.py  config_entries.py  const.py  core.py  exceptions.py
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_25e42bf33c714094___init___py.html  z_25e42bf33c714094__legacy_py.html  z_25e42bf33c714094_normalize_py.html  z_25e42bf33c714094_serialize_py.html  z_2cfafb4492f559dd___init___py.html  z_2cfafb4492f559dd_api_validator_py.html  z_2cfafb4492f559dd_base_manager_py.html  z_2cfafb4492f559dd_binary_sensor_py.html  z_2cfafb4492f559dd_button_py.html  z_2cfafb4492f559dd_cache_py.html  z_2cfafb4492f559dd_compat_py.html  z_2cfafb4492f559dd_config_entry_helpers_py.html  z_2cfafb4492f559dd_config_flow_base_py.html  z_2cfafb4492f559dd_config_flow_dashboard_extension_py.html  z_2cfafb4492f559dd_config_flow_discovery_py.html  z_2cfafb4492f559dd_config_flow_dogs_py.html  z_2cfafb4492f559dd_config_flow_external_py.html  z_2cfafb4492f559dd_config_flow_main_py.html  z_2cfafb4492f559dd_config_flow_modules_py.html  z_2cfafb4492f559dd_config_flow_monitor_py.html  z_2cfafb4492f559dd_config_flow_placeholders_py.html  z_2cfafb4492f559dd_config_flow_profile_py.html  z_2cfafb4492f559dd_config_flow_py.html  z_2cfafb4492f559dd_config_flow_reauth_py.html  z_2cfafb4492f559dd_config_flow_schemas_py.html  z_2cfafb4492f559dd_const_py.html  z_2cfafb4492f559dd_coordinator_access_enforcement_py.html  z_2cfafb4492f559dd_coordinator_accessors_py.html  z_2cfafb4492f559dd_coordinator_diffing_py.html  z_2cfafb4492f559dd_coordinator_observability_py.html  z_2cfafb4492f559dd_coordinator_py.html  z_2cfafb4492f559dd_coordinator_runtime_py.html  z_2cfafb4492f559dd_coordinator_support_py.html  z_2cfafb4492f559dd_coordinator_tasks_py.html  z_2cfafb4492f559dd_dashboard_cards_py.html  z_2cfafb4492f559dd_dashboard_generator_py.html  (+109 more)
hypothesis/: __init__.py
pytest_asyncio/: __init__.py  plugin.py
pytest_cov/: __init__.py  plugin.py
pytest_homeassistant_custom_component/: __init__.py  common.py  plugins.py
script/: __init__.py  check_typed_dicts.py  check_vendor_pyyaml.py  enforce_test_requirements.py  gen_requirements_all.py  hassfest.py  publish_coverage.py  ruff.toml  sync_contributor_guides.py  sync_homeassistant_dependencies.py  sync_localization_flags.allowlist  sync_localization_flags.py
scripts/: ENTITY_SERIALIZATION_MIGRATION.py  __init__.py  analyze_test_imports.py  check_integration.py  check_legacy_exception_syntax.py  check_typed_dicts.py  check_vendor_pyyaml.py  countries.py  deploy_checklist.sh  enforce_coverage_gates.py  enforce_docstring_baseline.py  enforce_shared_session_guard.py  enforce_test_requirements.py  enforce_test_todo_policy.py  final_validation_runner.py  fix_code.py  fix_mypy_issues.py  fix_typing_issues.py  gen_requirements_all.py  ha_fix.py  hass_async_load_fixtures.py  hass_decorator.py  hass_enforce_class_module.py  hass_enforce_greek_micro_char.py  hass_enforce_sorted_platforms.py  hass_enforce_super_call.py  hass_enforce_type_hints.py  hass_imports.py  hass_inheritance.py  hass_logger.py  hassfest.py  hassfest_hacs_validation.py  homeassistant_push_guard.py  homeassistant_upgrade_rules.json  integration_quality_assessment.py  languages.py  patch_mypy_errors.py  production_validation.py  publish_coverage.py  run_coverage_check.py  (+14 more)
scripts.removed/: fix_code.py
tests/: README.md  __init__.py  conftest.py  coverage_coordinator_observability.py  select_edge_cases_common.py  setup_entry_edge_cases_common.py  (+128 more)
(+960 files in other folders)
