# pyproject.toml — nur Tooling für eine Home‑Assistant Custom‑Integration
[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "-p pytest_cov --cov=custom_components.pawcontrol --cov-report=term-missing --cov-report=xml --cov-report=html --cov-branch --no-cov-on-fail -q -ra --strict-markers --strict-config --tb=short --disable-warnings --maxfail=20"
markers = [
  "asyncio: mark a test as using asyncio",
  "ci_only: mark a test to run only in CI",
  "benchmark: mark a test as benchmark/performance",
]
testpaths = [
    "tests"
]
python_files = [
    "test_*.py",
    "*_test.py",
    "tests.py"
]
pythonpath = [
  "."
]
asyncio_mode = "auto"
filterwarnings = [
    "error"
]

[tool.ruff]
target-version = "py314"
line-length = 88
src = ["custom_components"]
indent-width = 2
show-fixes = true
fix = true
unsafe-fixes = true

[tool.ruff.analyze]
detect-string-imports = true
direction = "dependencies"
string-imports-min-dots = 2
type-checking-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
docstring-code-format = true
skip-magic-trailing-comma = false

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.pep8-naming]
extend-ignore-names = ["test_*", "__init__*", "conftest*", "*example*"]

# The built‑in isort plugin of Ruff (`I001`) conflicts with the separate
# `reorder-python-imports` pre-commit hook.  To avoid an endless cycle
# where each tool reorders imports differently on every run, we ignore
# Ruff’s import‑sorting rule and let the dedicated hook handle ordering.
[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "I001"]
extend-ignore = [
  "INP001", # File is part of an implicit namespace package. Add an `__init__.py`.
]
fixable = ["ALL"]
unfixable = []
extend-unsafe-fixes = ["E", "F401"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403", "E402"]
"tests/**" = ["E402", "F401"]
"scripts/**" = ["E402", "F401"]

[tool.setuptools.package-dir]
"" = "."

###############################################################################
# Mypy configuration
#
# The integration targets Home Assistant's strict typing guidelines. We require
# typed definitions and enforce strictness while tolerating missing imports from
# third-party libraries that do not ship type hints.

[tool.mypy]
python_version = "3.14"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
enable_error_code = deprecated
explicit_package_bases = true
# Imports von HA und anderen libs ignorieren, da oft untyped
ignore_missing_imports = true
no_implicit_optional = true
local_partial_types = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["tests.*"]
# Tests dürfen etwas lockerer sein
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["custom_components.pawcontrol.*"]
# ACTIVATED: Require function signatures
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
# ACTIVATED: No implicit Optional types
no_implicit_optional = true
# Still allow some flexibility during transition
warn_return_any = false
disable_error_code = [
    # Still disabled during Phase 1.1 (will be enabled in Phase 1.2)
    "abstract",
    "arg-type",
    "assignment",
    "attr-defined",
    "call-arg",
    "call-overload",
    "comparison-overlap",
    "dict-item",
    "func-returns-value",
    "index",
    "list-item",
    "literal-required",
    "misc",
    "no-any-return",
    "no-redef",
    "operator",
    "override",
    "redundant-cast",
    # "return-value",  # ENABLED: Must return correct type
    "typeddict-item",
    "union-attr",
    "unused-ignore",
    "valid-type",
    "var-annotated",
]

[[tool.mypy.overrides]]
module = ["annotatedyaml.*"]
disable_error_code = [
    "no-any-return",
    "unused-ignore",
]

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false

[tool.coverage.run]
branch = true
source = [
    "custom_components/pawcontrol",
]
omit = [
    "tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
precision = 2
ignore_errors = true

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

[project]
name = "pawcontrol"
description = "Platinum-grade PawControl integration for Home Assistant"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "PawControl Engineering" },
]
keywords = ["home assistant", "pawcontrol", "pets", "automation", "telemetry"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: AsyncIO",
    "Programming Language :: Python :: 3.14",
    "Topic :: Home Automation",
    "Typing :: Typed",
]
dynamic = ["version", "dependencies", "optional-dependencies"]
requires-python = ">=3.14"

[project.urls]
Homepage = "https://github.com/BigDaddy1990/pawcontrol"
Documentation = "https://github.com/BigDaddy1990/pawcontrol/blob/main/README.md"
Issues = "https://github.com/BigDaddy1990/pawcontrol/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["homeassistant*"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.dynamic.optional-dependencies]
tests = { file = ["requirements_test.txt"] }

[tool.ruff.lint.isort]
force-sort-within-sections = true
known-first-party = ["homeassistant"]
combine-as-imports = true
split-on-trailing-comma = false
required-imports = ["from __future__ import annotations"]

[flake8]
max-line-length = 88
max-complexity = 12
type-checking-py314plus = true  # default false
type-checking-strict = true  # default false
type-checking-force-future-annotation = true  # default false
type-checking-exempt-modules = typing_extensions  # default []
ignore = E501
# You can use 'extend-select' (new in flake8 v4):
extend-select = TC, TC2
# OR 'select':
select = C,E,F..., TC, TC2  # or TC1
# OR 'enable-extensions':
enable-extensions = TC, TC2  # or TC1

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"async_timeout".msg = "use asyncio.timeout instead"
"pytz".msg = "use zoneinfo instead"
"tests".msg = "You should not import tests"

[tool.pylint.TYPECHECK]
ignored-classes = [
  "_CountingAttr", # for attrs
]
mixin-class-rgx = ".*[Mm]ix[Ii]n"

[tool.pylint.BASIC]
class-const-naming-style = "any"

[tool.pylint.REPORTS]
score = false

[tool.pylint.TYPING]
runtime-typing = false
