# pyproject.toml — Tooling für die PawControl Home-Assistant-Integration
[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pawcontrol"
description = "Platinum-grade PawControl integration for Home Assistant"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "PawControl Engineering" }]
keywords = ["home assistant", "pawcontrol", "pets", "automation", "telemetry"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Framework :: AsyncIO",
  "Programming Language :: Python :: 3.14",
  "Topic :: Home Automation",
  "Typing :: Typed",
]
dynamic = ["version", "dependencies", "optional-dependencies"]
requires-python = ">=3.14"

[project.urls]
Homepage = "https://github.com/BigDaddy1990/pawcontrol"
Documentation = "https://github.com/BigDaddy1990/pawcontrol/blob/main/README.md"
Issues = "https://github.com/BigDaddy1990/pawcontrol/issues"

[tool.pytest.ini_options]
addopts = "-p pytest_cov --cov=custom_components.pawcontrol --cov-report=term-missing --cov-report=xml --cov-report=html --cov-branch --no-cov-on-fail -q -ra --strict-markers --strict-config --tb=short --disable-warnings --maxfail=20"
markers = [
  "asyncio: mark a test as using asyncio",
  "ci_only: mark a test to run only in CI",
  "benchmark: mark a test as benchmark/performance",
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py", "tests.py"]
pythonpath = ["."]
asyncio_mode = "auto"
filterwarnings = ["error"]

[tool.ruff]
target-version = "py314"
line-length = 88
src = ["custom_components", "scripts", "tests"]
cache-dir = "~/.cache/ruff"
indent-width = 2
show-fixes = true
fix = true
unsafe-fixes = true
force-exclude = true
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".ipynb_checkpoints",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pyenv",
  ".pytest_cache",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  ".vscode",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "site-packages",
  "venv",
]

[tool.ruff.analyze]
detect-string-imports = true
direction = "dependencies"
string-imports-min-dots = 2
type-checking-imports = false

[tool.ruff.format]
preview = true
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"
skip-magic-trailing-comma = false

[tool.ruff.lint]
preview = true
select = ["E", "F", "I", "UP", "B", "SIM", "Q"]
ignore = ["E111", "E114", "E501", "INP001"]
fixable = ["ALL"]
unfixable = ["F401"]
extend-unsafe-fixes = ["E", "F401"]
future-annotations = true

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403", "E402"]
"tests/**" = ["E402", "F401"]
"scripts/**" = ["E402", "F401"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pep8-naming]
extend-ignore-names = ["test_*", "__init__*", "conftest*", "*example*"]

[tool.ruff.lint.isort]
force-sort-within-sections = true
known-first-party = ["custom_components", "pytest_"]
combine-as-imports = true
split-on-trailing-comma = false
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.flake8-builtins]
strict-checking = true

[tool.ruff.lint.flake8-copyright]
author = "Ruff"
min-file-size = 1024

[tool.ruff.lint.flake8-import-conventions]
banned-from = ["typing"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.lint.flake8-type-checking]
exempt-modules = ["typing", "typing_extensions"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"async_timeout".msg = "use asyncio.timeout instead"
"pytz".msg = "use zoneinfo instead"
"tests".msg = "You should not import tests"
"cgi".msg = "The cgi module is deprecated, see https://peps.python.org/pep-0594/#cgi."
"typing.TypedDict".msg = "Use typing_extensions.TypedDict instead."

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = true
mark-parentheses = true
parametrize-names-type = "list"
parametrize-values-row-type = "list"
parametrize-values-type = "list"

[tool.mypy]
python_version = "3.14"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
enable_error_code = "deprecated"
explicit_package_bases = true
ignore_missing_imports = true
no_implicit_optional = true
local_partial_types = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["custom_components.pawcontrol.*"]
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_return_any = false
disable_error_code = [
  "abstract",
  "arg-type",
  "assignment",
  "attr-defined",
  "call-arg",
  "call-overload",
  "comparison-overlap",
  "dict-item",
  "func-returns-value",
  "index",
  "list-item",
  "literal-required",
  "misc",
  "no-any-return",
  "no-redef",
  "operator",
  "override",
  "redundant-cast",
  "typeddict-item",
  "union-attr",
  "unused-ignore",
  "valid-type",
  "var-annotated",
]

[[tool.mypy.overrides]]
module = ["annotatedyaml.*"]
disable_error_code = ["no-any-return", "unused-ignore"]

[tool.coverage.run]
branch = true
source = ["custom_components/pawcontrol"]
omit = ["tests/*", "*/__pycache__/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
precision = 2
ignore_errors = true

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-dir]
"" = "."

[tool.setuptools.packages.find]
include = ["custom_components*", "pytest_*"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.dynamic.optional-dependencies]
tests = { file = ["requirements_test.txt"] }

[tool.pylint.TYPECHECK]
ignored-classes = ["_CountingAttr"]
mixin-class-rgx = ".*[Mm]ix[Ii]n"

[tool.pylint.BASIC]
class-const-naming-style = "any"

[tool.pylint.REPORTS]
score = false

[tool.pylint.TYPING]
runtime-typing = false
