[metadata]
name = paw_control
version = 1.0.0
description = Smart Dog Management for Home Assistant
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BigDaddy1990/paw_control
author = BigDaddy1990
author_email = bigdaddy1990@example.com
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Home Automation

[options]
packages = find:
python_requires = >=3.11
include_package_data = True
zip_safe = False
install_requires =
    homeassistant>=2024.1.0
    voluptuous>=0.13.1
    aiohttp>=3.8.0

[options.packages.find]
include = custom_components*

[options.package_data]
custom_components.pawcontrol = 
    *.json
    *.yaml
    translations/*.json

# Flake8 Configuration
[flake8]
max-line-length = 88
extend-ignore = E203, W503, E501
exclude = 
    .git,
    __pycache__,
    build,
    dist,
    *.egg-info,
    .venv,
    venv
per-file-ignores =
    __init__.py:F401
    tests/*:S101,S106
max-complexity = 12
